add text & icon style

--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -1,6 +1,5 @@
-.menu-button{
+.cat-btn{
     text-transform: capitalize;
     font-size: 18px;
-    color: #b2b2b2;
-    margin: 0 10px;
+    color: #1a54e7;
 }
